--- a/src/problems/passscheme/Makefile.am
+++ b/src/problems/passscheme/Makefile.am
@@ -17,10 +17,11 @@ SOURCES = $(BASEDIR)/phasefield.cc
 GRIDTYPE = SPGRID 
 #GRIDTYPE = ALBERTAGRID
 GRIDDIM =  1 
-POLORDER = 2 
+POLORDER = 1 
 USEJACOBIAN = 1 
 
-PROBLEM = 7 # check ./problemtype.hh
+PROBLEM = 3 # check ./problemtype.hh
+
 FLUX = 1 # check ./problemcreator.hh
 
 AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$(GRIDDIM) \
@@ -30,13 +31,13 @@ AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)
 
 check_PROGRAMS = phasefield  phasefield_nc phasefield_nctr
 phasefield_SOURCES = $(SOURCES) 
-phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DPROJECT 
+phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DPROJECT #-DRHOMODEL
 
 phasefield_nc_SOURCES = $(SOURCES) 
-phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED  
+phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED #-DRHOMODEL 
 
 phasefield_nctr_SOURCES = $(SOURCES) 
-phasefield_nctr_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED  -DNONCONTRANS 
+phasefield_nctr_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED  -DNONCONTRANS #-DRHOMODEL
 
 
 
