added new files

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ Makefile.in
 *.o
 *.swp
 *.trs
+*.pyc
+*.bak
+timer.out.0
+compiled.p
+/src/problems/passscheme/DATA_ARCHIVE
+/src/problems/mixedscheme/DATA_ARCHIVE
