--- a/src/problems/Makefile.am
+++ b/src/problems/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = passscheme allencahn mixedscheme 
+SUBDIRS = passscheme allencahn mixedscheme korteweg kortewegmixed 
 
 include $(top_srcdir)/am/global-rules
