--- a/src/problems/mixedscheme/Makefile.am
+++ b/src/problems/mixedscheme/Makefile.am
@@ -9,9 +9,9 @@ BASEDIR=../../../dune/fem/main
 SOURCES = $(BASEDIR)/phasefield.cc
 
 
-GRIDTYPE = ALUGRID_CUBE
+#GRIDTYPE = ALUGRID_CUBE
 #GRIDTYPE = ALUGRID_SIMPLEX
-#GRIDTYPE = SPGRID
+GRIDTYPE = SPGRID
 #GRIDTYPE = ALUGRID_CONFORM
 #GRIDTYPE = ALBERTAGRID
 GRIDDIM = 1
