new Makefile.am
(cherry picked from commit 166904b26e27eb78e7685a4747fd97049a85307d)

--- a/configure.ac
+++ b/configure.ac
@@ -37,6 +37,7 @@ AC_CONFIG_FILES([
   dune/fem/operator/Makefile
   dune/fem/operator/korteweg/Makefile
   dune/fem/operator/assembled/Makefile
+  dune/fem/operator/assembled/fluxes/Makefile
   src/problems/passscheme/Makefile
   src/problems/allencahn/Makefile
   src/problems/mixedscheme/Makefile
