removed trailing backslashes

--- a/dune/fem/operator/assembled/Makefile.am
+++ b/dune/fem/operator/assembled/Makefile.am
@@ -11,7 +11,7 @@ assembled_HEADERS=  phasefieldfilter.hh \
 										nskmatrixhelper.hh \
 										nskmatrix.hh \
 										phasefieldjacobian.hh \
-										phasefieldmatrix.hh \
+										phasefieldmatrix.hh 
 
 
 #USE_OMP=-fopenmp
