--- a/dune/fem/operator/assembled/models/Makefile.am
+++ b/dune/fem/operator/assembled/models/Makefile.am
@@ -1,5 +1,5 @@
 modelsdir = $(top_srcdir)/dune/fem/operator/assembled/models
 models_HEADERS =nskmodel.hh \
 								phasefieldmodel.hh \
-								travelmodel.hh \
+								travelmodel.hh 
 include $(top_srcdir)/am/global-rules
