--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,4 @@ timer.out.0
 /src/problems/mixedscheme/DATA_ARCHIVE
 /src/problems/Data
 /src/problems/mixedscheme/Data*
-/src/probelems/RunFiles*
+/src/problems/RunFiles*
