add split macro

--- a/src/problems/mixedscheme/Makefile.am
+++ b/src/problems/mixedscheme/Makefile.am
@@ -33,7 +33,7 @@ phasefieldunbal_SOURCES = $(SOURCES)
 phasefieldunbal_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DUNBALMODEL -DCOUPLING -DIMPLICITTAU
 
 phasefieldfd_SOURCES = $(SOURCES) 
-phasefieldfd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DFD -DSURFACE -DUNBALMODEL -DIMPLICITTAU
+phasefieldfd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DFD  -DSPLIT -DSURFACE  -DIMPLICITTAU
 
 phasefieldlambdacp_SOURCES = $(SOURCES) 
 phasefieldlambdacp_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DCOUPLING -DRHO_H2CONSTMODEL -DIMPLICITTAU 
@@ -88,7 +88,7 @@ DISTCHECK_CONFIGURE_FLAGS = DOXYGEN="true"
 
 EXTRA_DIST = paramFiles/param*
 
-CLEANFILES = manager.*.log 
+CLEANFILES = manager.*.log *.out 
 
 PROG=phase
 
