--- a/src/problems/mixedscheme/Makefile.am
+++ b/src/problems/mixedscheme/Makefile.am
@@ -24,41 +24,31 @@ AM_CPPFLAGS = $(USE_OMP) -I../../problems/phase  $(ALL_PKG_CPPFLAGS) -DGRIDDIM=$
               -DFLUX=$(FLUX) 
 AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)              
 
-check_PROGRAMS = phasefield  phasefieldfd phasefieldsplit phasefieldsplitfd #pfimp pflambdaimp pfrhoimp #phasefieldcoupling
+check_PROGRAMS = phasefield phasefield_fd phasedield_ub phasefield_split  phasefield_ub_split phasefield_lambda
 
 phasefield_SOURCES = $(SOURCES)
 phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DCOUPLING -DIMPLICITTAU
 
-phasefieldfd_SOURCES = $(SOURCES) 
-phasefieldfd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DFD -DSURFACE  -DIMPLICITTAU
+phasefield_fd_SOURCES = $(SOURCES) 
+phasefield_fd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DFD  -DIMPLICITTAU
 
-phasefieldsplit_SOURCES = $(SOURCES)
-phasefieldsplit_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DCOUPLING -DSPLIT -DIMPLICITTAU
+phasefield_ub_SOURCES = $(SOURCES)
+phasefield_ub_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DUNBALMODEL -DCOUPLING -DIMPLICITTAU
 
+phasefield_split_SOURCES = $(SOURCES)
+phasefield_split_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE  -DCOUPLING -DSPLIT -DIMPLICITTAU
 
-phasefieldsplitfd_SOURCES = $(SOURCES) 
-phasefieldsplitfd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DFD  -DSPLIT -DSURFACE  -DIMPLICITTAU
+phasefield_ub_split_SOURCES = $(SOURCES)
+phasefield_ub_split_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DCOUPLING -DSPLIT -DIMPLICITTAU
 
-
-
-
-#pfimp_SOURCES = $(SOURCES) 
-#pfimp_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DFD  -DIMPLICITTAU
-
-#pfrhoimp_SOURCES = $(SOURCES) 
-#pfrhoimp_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DFD -DRHOMODEL  -DIMPLICITTAU
-
-#pflambdaimp_SOURCES = $(SOURCES) 
-#pflambdaimp_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DFD -DRHOMODEL -DLAMBDASCHEME -DIMPLICITTAU
-
+phasefield_lambda_SOURCES = $(SOURCES) 
+phasefield_lambda_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DSURFACE -DRHOMODEL -DLAMBDASCHEME -DCOUPLING -DIMPLICITTAU
 
 #phasefieldmfree_SOURCES = $(SOURCES) 
 #phasefieldmfree_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DMATRIXFREE 
-#
+
 #phasefieldoem_SOURCES = $(SOURCES) 
 #phasefieldoem_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED  
-
-
 
 #phasefieldparagrid_SOURCES = $(SOURCES) 
 #phasefieldparagrid_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DNOFILTER -DPARAGRID 
