--- a/src/problems/passscheme/Makefile.am
+++ b/src/problems/passscheme/Makefile.am
@@ -31,13 +31,13 @@ AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)
 
 check_PROGRAMS = phasefield  phasefield_nc phasefield_nctr
 phasefield_SOURCES = $(SOURCES) 
-phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DPROJECT -DSURFACE -DUNBALMODEL
+phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DPROJECT -DSURFACE
 
 phasefield_nc_SOURCES = $(SOURCES) 
-phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED -DSURFACE -DUNBALMODEL
+phasefield_nc_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED -DSURFACE
 
 phasefield_nctr_SOURCES = $(SOURCES) 
-phasefield_nctr_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED  -DNONCONTRANS -DSURFACE -DUNBALMODEL
+phasefield_nctr_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DUSEJACOBIAN=1 -DWELLBALANCED  -DNONCONTRANS -DSURFACE
 
 
 
