--- a/src/problems/mixedscheme/Makefile.am
+++ b/src/problems/mixedscheme/Makefile.am
@@ -36,8 +36,8 @@ phasefield_Time_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_
 phasefield_fd_SOURCES = $(SOURCES) 
 phasefield_fd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DTHERMO=$(THERMO) -DFD -DTAYLOR -DEOC
 
-phasefield_fd_SOURCES = $(SOURCES) 
-phasefield_fd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DTHERMO=$(THERMO) -DFD -DTAYLORR
+phasefield_fdTime_SOURCES = $(SOURCES) 
+phasefield_fdTime_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DTHERMO=$(THERMO) -DFD -DTAYLOR
 
 
 #phasefield_fd_dq_SOURCES = $(SOURCES)
