--- a/src/problems/kortewegmixed/Makefile.am
+++ b/src/problems/kortewegmixed/Makefile.am
@@ -27,7 +27,7 @@ AM_LDFLAGS = $(ALL_PKG_LDFLAGS) $(LAPACK_LDFLAGS) $(USE_OMP)
 check_PROGRAMS = phasefield phasefieldfd
 
 phasefield_SOURCES = $(SOURCES) 
-phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DNSK 
+phasefield_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DWANT_ISTL -DCOUPLING -DNSK 
 
 phasefieldfd_SOURCES = $(SOURCES)
 phasefieldfd_CPPFLAGS = $(AM_CPPFLAGS) -DPOLORDER=$(POLORDER) -DMIXED -DFD -DWANT_ISTL -DNSK 
