--- a/dune/phasefield/Makefile.am
+++ b/dune/phasefield/Makefile.am
@@ -1,5 +1,5 @@
 include $(top_srcdir)/am/global-rules
 
 phasefieldincludedir = $(includedir)/dune/phasefield
-phasefieldinclude_HEADERS =  algorithmtraits.hh phasefieldalgorithm.hh assembledalgorithm.hh
+phasefieldinclude_HEADERS =  algorithmbass.hh algorithmtraits.hh assembledalgoderived.hh assembledtraits.hh passalgoderived.hh
 
