--- a/dune/fem/Makefile.am
+++ b/dune/fem/Makefile.am
@@ -1,3 +1,4 @@
 SUBDIRS = adaptation base fluxes main operator util
-
 include $(top_srcdir)/am/global-rules
+
+femincludedir = $(includedir)/dune/fem
