--- a/dune/fem/fluxes/Makefile.am
+++ b/dune/fem/fluxes/Makefile.am
@@ -1,3 +1,3 @@
-fluxesdir = $(top_srcdir)/dune/fem/fluxes
-fluxes_HEADERS = averageflux.hh eulerfluxes.hh newfluxes.hh ldgflux.hh ldgfluxtheta.hh 
+fluxesdir = $(top_srcdir)/dune/fem/fluxesk
+fluxes_HEADERS = averageflux.hh eulerfluxes.hh ldgfluxtheta.hh ldgfluxwellbalanced.hh  meanfluxwellbalanced.hh myldgflux.hh nskfluxes.hh newfluxes.hh 
 include $(top_srcdir)/am/global-rules
