--- a/dune/fem/operator/Makefile.am
+++ b/dune/fem/operator/Makefile.am
@@ -1,16 +1,17 @@
-SUBDIRS = assembled
+SUBDIRS = assembled common korteweg
 operatordir = $(top_srcdir)/dune/fem/operator
-operator_HEADERS =	discretemodelcommon.hh \
-										explicitwbdiscretemodel.hh \
+operator_HEADERS =	allencahndiscretemodel.hh \
+										allencahndiscretemodelvelo.hh \
+										allencahnoperator.hh \
+										discretemodelcommon.hh \
 										fluxdiscretemodel.hh \
 										fluxoperator.hh \
 										fluxprojdiscretemodel.hh \
 										fluxprojoperator.hh \
 										gradientdiscretemodel.hh \
-										impclicitwbdiscretemodel.hh \
-										projectiodiscretemodelcommon.hh \
+										primaldiscretemodel.hh\
+										projectiondiscretemodelcommon.hh \
 										thetadiscretemodel.hh \
-										wbsplitoperator \
 										wellbalanceddiscretemodel.hh \
 										wellbalancedoperator.hh 
 include $(top_srcdir)/am/global-rules
