--- a/dune/fem/util/Makefile.am
+++ b/dune/fem/util/Makefile.am
@@ -1,3 +1,3 @@
 utilsrcdir = $(top_srcdir)/dune/fem/util
-utilsrc_HEADERS = cons2prim.hh  ellipt.hh  energyconverter.hh  fmatrixev.hh operator2matrix.hh phasefieldodesolver.hh
+utilsrc_HEADERS = fmatrixev.hh oemwrapper.hh phasefieldodesolver.hh
 include $(top_srcdir)/am/global-rules
