--- a/dune/phasefield/Makefile.am
+++ b/dune/phasefield/Makefile.am
@@ -1,5 +1,6 @@
+SUBDIRS = modelling util
 include $(top_srcdir)/am/global-rules
 
 phasefieldincludedir = $(includedir)/dune/phasefield
-phasefieldinclude_HEADERS =  algorithmbass.hh algorithmtraits.hh assembledalgoderived.hh assembledtraits.hh passalgoderived.hh
+phasefieldinclude_HEADERS =  algorithmbase.hh algorithmtraits.hh assembledalgoderived.hh assembledtraits.hh passalgoderived.hh
 
