--- a/dune/phasefield/modelling/Makefile.am
+++ b/dune/phasefield/modelling/Makefile.am
@@ -1,3 +1,3 @@
-modellingdir = $(includedir)/dune/phasefield/modelling
-modelling_HEADERS = standardmodel.hh wellbalancedmodel.hh 
+modellingdirr = $(includedir)/dune/phasefield/modelling
+
 include $(top_srcdir)/am/global-rules
