use Makefile.am

--- a/dune/phasefield/modelling/CoquelTaylorSources/Makefile.am
+++ b/dune/phasefield/modelling/CoquelTaylorSources/Makefile.am
@@ -1,3 +1,7 @@
+coqueldir = $(includedir)/dune/phasefield/modelling/CoquelTaylorsources
+
+include $(top_srcdir)/am/global-rules
+
 SCRIPT='../scripts/codegentaylor.py'
 all: realmaple.cc realRho.cc coquelTaylormaple.cc coquelTaylorRho.cc coquelTaylorMmaple.cc coquelTaylorMRho.cc stiffenedgasmaple.cc stiffenedgasRho.cc
 
@@ -21,11 +25,14 @@ coquelTaylorMmaple.cc: coquelTaylorMCODEGEN.mpl
 coquelTaylorMRho.cc: coquelTaylorMCODEGEN.mpl
 	$(SCRIPT) 3
 
+coquelTaylorMSources.cc: coquelTaylorMCODEGEN.mpl
+	$(SCRIPT) 3
+
 stiffenedgasmaple.cc: stiffenedgasCODEGEN.mpl
 	$(SCRIPT) 4
 
 stiffenedgasRho.cc: stiffenedgasCODEGEN.mpl
 	$(SCRIPT) 4
 
-clean :
+clean-local:
 	rm *.cc
